--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tahitian Text Generator</title>
+    <title>Groose's HTML Factory</title>
     <style>
         body {
             background-image: url('background.jpg'); /* Replace 'background.jpg' with the actual filename of your image */
@@ -12,9 +12,9 @@
 </head>
 <body>
     <h1>Tahitian Text Generator</h1>
-    <textarea id="text-input" rows="10" cols="30" placeholder="Enter your Tahitian text here"></textarea>
-    <button id="generate-button">Generate HTML</button>
-    <a id="download-link" style="display: none">Download HTML</a>
+    <textarea id="text-input" rows="10" cols="30" placeholder="Enter code here"></textarea>
+    <button id="generate-button">Generate File</button>
+    <a id="download-link" style="display: none">Download File</a>
 
     <script>
         const generateButton = document.getElementById('generate-button');
