--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Tahitian Text Generator</h1>
+    <h1>Groose's HTML Factory</h1>
     <textarea id="text-input" rows="10" cols="30" placeholder="Enter code here"></textarea>
     <button id="generate-button">Generate File</button>
     <a id="download-link" style="display: none">Download File</a>
