--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             const downloadLink = document.getElementById('download-link');
             downloadLink.href = url;
-            downloadLink.download = 'tahitian_text.html';
+            downloadLink.download = 'index.html';
             downloadLink.style.display = 'block';
         }
     </script>
