--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             const htmlContent = `<!DOCTYPE html>
 <html>
 <head>
-    <title>Tahitian Text</title>
+    <title>HTML Text</title>
 </head>
 <body>
     <p>${text}</p>
